opam-version: "1.2"
synopsis: "Simple audio player in OCaml"
maintainer: "gndl@users.noreply.github.com"
authors: ["gndl"]
homepage: "https://github.com/gndl/playo"
bug-reports: "https://github.com/gndl/playo/issues"
dev-repo: "https://github.com/gndl/playo.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" playo]
]

build-test: ["dune" "runtest" "-p" playo]

depends: [
  "dune" {build}
  "alcotest" {test}
  "lablgtk"
  "ffmpeg" {<= "0.2.0"}
  "ppx_sexp_conv" {build}
  "ppxlib" {build}
  "sexplib"
]

available: [
  ocaml-version >= "4.05.0"
]
